# rules_nodejs

./: .bazelrc  .bazelversion  .git-blame-ignore-revs  BUILD.bazel  DEVELOPING.md  README.md  WORKSPACE  commitlint.config.js  index.bzl  js_providers.bzl  package-lock.json  package.bzl  package.json
.bazelci/: presubmit.yml
docs/: Built-ins.html  Built-ins.md  Cypress.html  Cypress.md  Jasmine.html  Jasmine.md  Karma.html  Karma.md  Labs.html  Labs.md  Protractor.html  Protractor.md  Rollup.html  Rollup.md  Terser.html  Terser.md  TypeScript.html  TypeScript.md
examples/: BUILD.bazel
examples/angular/: package.json
examples/angular/.firebase/: hosting.ZGlzdC9iaW4vc3JjL3Byb2RhcHA.cache
examples/angular/src/lib/shorten/: BUILD.bazel  package.json
examples/angular_bazel_architect/: WORKSPACE
examples/angular_bazel_architect/subdir/: BUILD.bazel
examples/angular_bazel_architect/subdir/projects/frontend-lib/: BUILD.bazel
examples/app/: BUILD.bazel
examples/app/test/: BUILD.bazel
examples/npm_workspaces/: WORKSPACE  package-lock.json  package.json
examples/purescript/: .gitignore  BUILD.bazel  README.md  WORKSPACE  bower.json  package-lock.json  package.json
internal/common/: npm_package_info.bzl
internal/linker/: BUILD.bazel  index.js  link_node_modules.bzl  link_node_modules.js  link_node_modules.ts
internal/linker/test/integration/: BUILD.bazel  program.js  run_program.sh
internal/node/: directory_entry_point.bzl  node.bzl  node_launcher.sh  node_loader.js  npm_package_bin.bzl
internal/npm_fetch_deps/: BUILD.bazel  generate_build_file.ts  hello_world.js  index.js  node_modules.bzl  npm_fetch_deps.bzl  npm_tarball.bzl
internal/npm_install/: BUILD.bazel  browserify-wrapped.js  generate_build_file.js  index2.js  node_modules.bzl  npm_fetch_deps.bzl
internal/npm_install/test/: generate_build_file.spec.js
internal/npm_package/: npm_package.bzl
internal/npm_package/test/: npm_package.spec.js  package.json
internal/npm_tarballs/: BUILD.bazel  generate_build_file.ts  hello_world.js  index.js  npm_fetch_tarballs.bzl  npm_install_tarballs.bzl  npm_tarball.bzl  package_lock.bzl  rollup.config.js
internal/pkg_npm/: pkg_npm.bzl
internal/providers/: entry_point_info.bzl
internal/rollup/: BUILD.bazel  brotli-directory.js  package.json  rollup.config.js  rollup_bundle.bzl
internal/web_package/test/: BUILD.bazel
internal/web_package/test2/: BUILD.bazel
scripts/: mirror_bazel.sh  on-release.js  packages.sh
toolchains/node/: BUILD.bazel  node_toolchain.bzl
tools/: defaults.bzl
tools/stardoc/templates/: func.vm  rule.vm
