load("@build_bazel_rules_nodejs//internal/web_package:web_package.bzl", "web_package")
load("@npm_bazel_rollup//:index.from_src.bzl", "rollup_bundle")
load("@npm_bazel_terser//:index.from_src.bzl", "terser_minified")
load("@npm_bazel_jasmine//:index.from_src.bzl", "jasmine_node_test")

package(default_visibility = ["//visibility:public"])

rollup_bundle(
    name = "bundle",
    entry_point = ":script.js",
)

terser_minified(
    name = "bundle.min",
    src = "bundle.js",
    sourcemap = False,
)

web_package(
    name = "pkg",
    # Intentionally duplicating `bundle.min.js` in assets and data
    # to test for regression of the issues fixed by
    # https://github.com/bazelbuild/rules_nodejs/pull/546
    assets = [":bundle.min"],
    data = [":bundle"],
    index_html = "index.html",
)

jasmine_node_test(
    name = "test",
    srcs = ["spec.js"],
    data = [
        "index_golden.html_",
        ":pkg",
    ],
    tags = [
        "fix-windows",
    ],
)
