load(":rule.bzl", "linked")

linked(
    name = "example",
    deps = [
        "//internal/linker/test/integration/pkg_a",
        "@npm//semver",
    ],
)

# Declare a binary target so we can make the toolchain dependencies on bash and node
sh_binary(
    name = "test_bin",
    srcs = ["test.sh"],
    toolchains = ["@build_bazel_rules_nodejs//toolchains/node:toolchain_type"],
)

sh_test(
    name = "test",
    srcs = [
        "test.sh",
    ],
    data = [
        ":example",
        ":program.js",
        "//internal/linker:link_node_modules.js",
        # TODO: we shouldn't need to repeat this here. There's a bug somewhere
        "@npm//semver",
    ],
)
