load("@build_bazel_rules_nodejs//:index.bzl", "npm_package")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "shorten",
    srcs = ["shorten.ts"],
)

# This package could be published with
# bazel run //src/lib/shorten:package.publish
npm_package(
    name = "package",
    srcs = [
        "package.json",
    ],
    deps = [
        "shorten",
    ],
)
